feat: реализованы хэндлеры для сервера
